[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zapzap"
dynamic = ["version"]

description = "zapzap whatsapp client web app"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-or-later" }

authors = [
  { name = "Rafael Tosta", email = "rafa.ecomp@gmail.com" }
]

keywords = ["zapzap", "whatsapp", "client", "web", "app"]

classifiers = [
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Topic :: Office/Business",
  "Programming Language :: Python :: 3 :: Only"
]

dependencies = [
  "PyQt6",
  "PyQt6-WebEngine"
]

[project.optional-dependencies]
dbus = ["dbus-python"]

[project.urls]
Homepage = "https://rtosta.com/zapzap"

[project.scripts]
zapzap = "zapzap.__main__:main"

[tool.setuptools]
packages = [
  "zapzap",
  "zapzap.config",
  "zapzap.controllers",
  "zapzap.models",
  "zapzap.resources",
  "zapzap.services",
  "zapzap.views",
  "zapzap.debug",
  "zapzap.notifications",
  "zapzap.webengine"
]

[tool.setuptools.package-data]
zapzap = [
  "po/*/LC_MESSAGES/*.mo",
  "js/*",
  "extensions/*"
]

[tool.setuptools.dynamic]
version = { attr = "zapzap.__version__" }