[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zapzap"
dynamic = ["version"]

description = "zapzap whatsapp client web app"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-or-later" }

authors = [
  { name = "Rafael Tosta", email = "rafa.ecomp@gmail.com" }
]

keywords = ["zapzap", "whatsapp", "client", "web", "app"]

classifiers = [
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Topic :: Office/Business",
  "Programming Language :: Python :: 3 :: Only"
]

dependencies = [
  "PyQt6",
  "PyQt6-WebEngine"
]

[project.optional-dependencies]
dbus = ["dbus-python; sys_platform == 'linux'"]

[project.urls]
Homepage = "https://rtosta.com/zapzap"

[project.scripts]
zapzap = "zapzap.__main__:main"

[tool.setuptools]
packages = [
  "zapzap",
  "zapzap.app",
  "zapzap.controllers",
  "zapzap.controllers.settings",
  "zapzap.core",
  "zapzap.core.config",
  "zapzap.core.diagnostics",
  "zapzap.core.environment",
  "zapzap.core.i18n",
  "zapzap.core.platform",
  "zapzap.core.theme",
  "zapzap.features",
  "zapzap.features.alerts",
  "zapzap.features.customizations",
  "zapzap.features.dictionaries",
  "zapzap.features.downloads",
  "zapzap.features.notifications",
  "zapzap.features.permissions",
  "zapzap.features.startup",
  "zapzap.features.tray",
  "zapzap.models",
  "zapzap.models.settings",
  "zapzap.assets",
  "zapzap.assets.icons",
  "zapzap.assets.themes",
  "zapzap.ui",
  "zapzap.ui.components",
  "zapzap.ui.generated",
  "zapzap.ui.main_window",
  "zapzap.views",
  "zapzap.views.settings",
  "zapzap.views.browser",
  "zapzap.views.settings_components",
  "zapzap.webengine"
]

[tool.setuptools.package-data]
zapzap = [
  "po/*/LC_MESSAGES/*.mo",
  "js/*",
  "extensions/*",
  "webengine/*.js",
  "assets/themes/*.css"
]

[tool.setuptools.dynamic]
version = { attr = "zapzap.__version__" }