[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zapzap"
dynamic = ["version"]

description = "zapzap whatsapp client web app"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-or-later" }

authors = [
  { name = "Rafael Tosta", email = "rafa.ecomp@gmail.com" }
]

keywords = ["zapzap", "whatsapp", "client", "web", "app"]

classifiers = [
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Topic :: Office/Business",
  "Programming Language :: Python :: 3 :: Only"
]

dependencies = [
  "PyQt6",
  "PyQt6-WebEngine"
]

[project.optional-dependencies]
dbus = ["dbus-python; sys_platform == 'linux'"]

[project.urls]
Homepage = "https://rtosta.com/zapzap"

[project.scripts]
zapzap = "zapzap.__main__:main"

[tool.setuptools]
packages = [
  "zapzap",
  "zapzap.app",
  "zapzap.core",
  "zapzap.core.config",
  "zapzap.core.diagnostics",
  "zapzap.core.environment",
  "zapzap.core.i18n",
  "zapzap.core.platform",
  "zapzap.core.theme",
  "zapzap.features",
  "zapzap.features.accounts",
  "zapzap.features.accounts.domain",
  "zapzap.features.browser",
  "zapzap.features.browser.components",
  "zapzap.features.browser.shell",
  "zapzap.features.browser.web",
  "zapzap.features.settings",
  "zapzap.features.settings.components",
  "zapzap.features.settings.shell",
  "zapzap.features.settings.pages",
  "zapzap.features.settings.pages.about",
  "zapzap.features.settings.pages.accounts",
  "zapzap.features.settings.pages.advanced_customizations",
  "zapzap.features.settings.pages.appearance",
  "zapzap.features.settings.pages.debugging",
  "zapzap.features.settings.pages.language_downloads",
  "zapzap.features.settings.pages.network_privacy",
  "zapzap.features.settings.pages.notifications",
  "zapzap.features.settings.pages.performance_experimental",
  "zapzap.features.settings.pages.permissions",
  "zapzap.features.settings.pages.system_startup",
  "zapzap.features.alerts",
  "zapzap.features.customizations",
  "zapzap.features.dictionaries",
  "zapzap.features.donation",
  "zapzap.features.downloads",
  "zapzap.features.downloads.ui",
  "zapzap.features.notifications",
  "zapzap.features.onboarding",
  "zapzap.features.permissions",
  "zapzap.features.shortcuts",
  "zapzap.features.startup",
  "zapzap.features.tray",
  "zapzap.assets",
  "zapzap.assets.icons",
  "zapzap.assets.themes",
  "zapzap.ui",
  "zapzap.ui.components",
  "zapzap.ui.generated",
  "zapzap.ui.main_window",
]

[tool.setuptools.package-data]
zapzap = [
  "po/*/LC_MESSAGES/*.mo",
  "js/*",
  "extensions/*",
  "features/browser/web/scripts/*.js",
  "assets/themes/*.css"
]

[tool.setuptools.dynamic]
version = { attr = "zapzap.__version__" }